test/files/neg/t10896.scala
object t10896 {
 type S[A[_]] = A[A[Int]]
 type F[A] = S[S]
}
